istio/ambientmesh/request_timeout.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: frontend
  namespace: otel-demo
spec:
  hosts:
    - opentelemetry-demo-frontend
  http:
    - route:
      - destination:
          host: opentelemetry-demo-productcatalogservice
      timeout: 900ms
    - route:
        - destination:
            host:  opentelemetry-demo-cartservice
      timeout: 900ms
